图片懒加载测试

--- a/index/index.html
+++ b/index/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../font/iconfont/iconfont.css">
     <script src="../js/jquery-1.12.4.js"></script>
+    <script src="../js/jquery.lazyload.js"></script>
     <script src="../js/index.js"></script>
 </head>
 
@@ -115,6 +116,7 @@
                         <a href="javascript:;">
                             <div class="tuing">
                                 <img src="../image/open_1.jpg">
+                                <!-- <img class="lazy" data-original="../image/open_1.jpg" width="307" height="230" alt="BMW M1 Hood"> -->
                             </div>
                             <div class="TEXT">花朵</div>
                         </a>
@@ -123,6 +125,7 @@
                         <a href="javascript:;">
                             <div class="tuing">
                                 <img src="../image/open_2.jpg">
+                                <!-- <img class="lazy" data-original="../image/open_2.jpg" width="307" height="230" alt="BMW M1 Hood"> -->
                             </div>
                             <div class="TEXT">花朵摆件</div>
                         </a>
@@ -131,6 +134,7 @@
                         <a href="javascript:;">
                             <div class="tuing">
                                 <img src="../image/open_3.jpg">
+                                <!-- <img class="lazy" data-original="../image/open_3.jpg" width="307" height="230" alt="BMW M1 Hood"> -->
                             </div>
                             <div class="TEXT">气球</div>
                         </a>
@@ -139,34 +143,11 @@
                         <a href="javascript:;">
                             <div class="tuing">
                                 <img src="../image/open_4.webp">
+                                <!-- <img class="lazy" data-original="../image/open_4.jpg" width="307" height="230" alt="BMW M1 Hood"> -->
                             </div>
                             <div class="TEXT">生意兴隆</div>
                         </a>
                     </li>
-                    <!-- <li>
-                        <a href="javascript:;">
-                            <div class="tuing">
-                                <img src="../image/图5.jpg">
-                            </div>
-                            <div class="TEXT">xxxx</div>
-                        </a>
-                    </li> -->
-                    <!-- <li>
-                        <a href="javascript:;">
-                            <div class="tuing">
-                                <img src="../image/图6.jpg">
-                            </div>
-                            <div class="TEXT">xxxx</div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="javascript:;">
-                            <div class="tuing">
-                                <img src="../image/图7.jpg">
-                            </div>
-                            <div class="TEXT">xxxx</div>
-                        </a>
-                    </li> -->
                 </ul>
 
                 <ul class="banner2">
