--- a/index/aboutUs.html
+++ b/index/aboutUs.html
@@ -8,8 +8,10 @@
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/aboutUs.css">
     <link rel="stylesheet" href="../font/iconfont/iconfont.css">
+    <script src="http://api.map.baidu.com/api?v=2.0&ak=eYiZOzgUHBuNlrTYzBINVIbDCyVi745F"></script>
     <script src="../js/jquery-1.12.4.js"></script>
     <script src="../js/aboutUs.js"></script>
+    <script src="../js/map.js"></script>
 </head>
 
 <body>
@@ -41,7 +43,7 @@
                         <a href="./jiejue.html" class="skip">解决方案</a>
                     </li>
                     <li>
-                        <a href="javascript:;" class="skip">合作案例</a>
+                        <a href="./teamwork.html" class="skip">合作案例</a>
                     </li>
                     <li>
                         <a href="./rencai.html" class="skip">人才招聘</a>
@@ -124,7 +126,7 @@
                         </div>
                         <div class="text">
                             <p>联系邮箱</p>
-                            <p>xykj@seniornet.cn</p>
+                            <p>hr@tonher.cn</p>
                         </div>
                     </li>
                     <li>
@@ -142,7 +144,7 @@
                         </div>
                         <div class="text">
                             <p>业务咨询</p>
-                            <p>400-099-8777</p>
+                            <p>0571-8609 8167</p>
                         </div>
                     </li>
                     <li>
@@ -161,37 +163,47 @@
         </div>
     </div>
     <!-- 新闻资讯 -->
-    <div class="news">
+    <div class="news" id="linkFive">
         <div class="content container">
             <div class="title">
                 <p>新闻资讯</p>
             </div>
             <div class="banner">
-                <ul class="wrap">
+                <ul class="wrap clearfix">
                     <li class="banner-box">
-                        <img src="../img/aboutUs_slices/52@2x.png" alt="">
-                        <p class="title">让文艺更骚气</p>
-                        <p class="text">经过前端小哥哥三个月废寝忘食的开发，禧小越正式宣布：网易LOFTER与禧小越的合作今日上线啦！</p>
+                        <div class="img-box">
+                            <img src="../img/index_slices/Christmas.jpg" alt="">
+                        </div>
+                        <p class="title">圣诞欢喜</p>
+                        <p class="text">圣诞节快乐</p>
                     </li>
                     <li class="banner-box">
-                        <img src="../img/aboutUs_slices/52@2x.png" alt="">
-                        <p class="title">让文艺更骚气</p>
-                        <p class="text">经过前端小哥哥三个月废寝忘食的开发，禧小越正式宣布：网易LOFTER与禧小越的合作今日上线啦！</p>
+                        <div class="img-box">
+                            <img src="../img/index_slices/Christmas.jpg" alt="">
+                        </div>
+                        <p class="title">圣诞欢喜</p>
+                        <p class="text">圣诞节快乐</p>
                     </li>
                     <li class="banner-box">
-                        <img src="../img/aboutUs_slices/52@2x.png" alt="">
-                        <p class="title">让文艺更骚气</p>
-                        <p class="text">经过前端小哥哥三个月废寝忘食的开发，禧小越正式宣布：网易LOFTER与禧小越的合作今日上线啦！</p>
+                        <div class="img-box">
+                            <img src="../img/index_slices/Christmas.jpg" alt="">
+                        </div>
+                        <p class="title">圣诞欢喜</p>
+                        <p class="text">圣诞节快乐</p>
                     </li>
                     <li class="banner-box">
-                        <img src="../img/aboutUs_slices/52@2x.png" alt="">
-                        <p class="title">让文艺更骚气</p>
-                        <p class="text">经过前端小哥哥三个月废寝忘食的开发，禧小越正式宣布：网易LOFTER与禧小越的合作今日上线啦！</p>
+                        <div class="img-box">
+                            <img src="../img/index_slices/Christmas.jpg" alt="">
+                        </div>
+                        <p class="title">圣诞欢喜</p>
+                        <p class="text">圣诞节快乐</p>
                     </li>
                     <li class="banner-box">
-                        <img src="../img/aboutUs_slices/52@2x.png" alt="">
-                        <p class="title">让文艺更骚气</p>
-                        <p class="text">经过前端小哥哥三个月废寝忘食的开发，禧小越正式宣布：网易LOFTER与禧小越的合作今日上线啦！</p>
+                        <div class="img-box">
+                            <img src="../img/index_slices/Christmas.jpg" alt="">
+                        </div>
+                        <p class="title">圣诞欢喜</p>
+                        <p class="text">圣诞节快乐</p>
                     </li>
                 </ul>
             </div>
@@ -204,6 +216,12 @@
             </div>
         </div>
     </div>
+    <!-- 地图 -->
+    <div class="map-parent">
+        <p class="title">我们的位置</p>
+        <div id="map-container" class="map"></div>
+    </div>
+
     <!-- 最底部 -->
     <div class="footer">
         <div class="container content">
@@ -217,40 +235,40 @@
                 <li class="set">
                     <dl>
                         <dt>服务</dt>
-                        <dd>业务分类</dd>
-                        <dd>产品类型</dd>
-                        <dd>解决方案</dd>
-                        <dd>产品模式</dd>
+                        <dd><a href="./product.html">业务分类</a></dd>
+                        <dd><a href="product.html#linkOne">产品类型</a></dd>
+                        <dd><a href="./jiejue.html">解决方案</a></dd>
+                        <dd><a href="jiejue.html#linkThree">合作模式</a></dd>
                     </dl>
                 </li>
                 <li class="set">
                     <dl>
                         <dt>公司</dt>
-                        <dd>业务分类</dd>
-                        <dd>产品类型</dd>
-                        <dd>解决方案</dd>
-                        <dd>产品模式</dd>
+                        <dd><a href="./aboutUs.html">关于我们</a></dd>
+                        <dd><a href="index.html#linkFour">联系我们</a></dd>
+                        <dd><a href="./rencai.html">人才招聘</a></dd>
+                        <dd><a href="aboutUs.html#linkFive">新闻咨询</a></dd>
                     </dl>
                 </li>
                 <li class="end">
                     <p>业务资讯专线：</p>
-                    <p class="pt number">400-099-8777</p>
-                    <p class="pt">联系邮箱：xy@seniornet.cn</p>
+                    <p class="pt number">0571-8609 8167</p>
+                    <p class="pt">联系邮箱：hr@tonher.cn</p>
                     <p class="pt last">
-                        <span class="text-one lf">办公地址：杭州市拱墅区祥园路139号浙大网新智慧立方A座605</span>
+                        <span class="text-one lf">办公地址：杭州市江干区江宁路553号东溪德必易园B3106</span>
                     </p>
                 </li>
             </ul>
             <div class="line-content">
                 <div class="writer">
                     <p>
-                        Copyright @ 2016-2019 禧润通和（杭州）科技有限公司 All Rights Resvered
-                        <a href="javascript:;">浙ICP备16035416号</a>
+                        Copyright © 2020-2021 禧润通和（杭州）科技有限公司 All Rights Resvered
+                        <!-- <a href="javascript:;">增值电信业务经营许可证：浙B2-20140331 - 浙ICP备13037466号</a> -->
                     </p>
                     <span>|</span>
                     <p>
-                        <img src="https://cos.xiaodashi.com/static/offical/offical/img/index/gov.png">
-                        <a href="javascript:;">浙公网安备 33010302003475号-4</a>
+                        <!-- <img src="https://cos.xiaodashi.com/static/offical/offical/img/index/gov.png"> -->
+                        <a href="javascript:;">增值电信业务经营许可证：浙B2-20193152 - 浙ICP备19000326号</a>
                     </p>
                 </div>
 
@@ -260,6 +278,11 @@
     <div class="back-top">
         <p class="huojian iconfont icon-huojian-X"></p>
         <p class="font">返回顶部</p>
+    </div>
+    <!-- 联系客服 -->
+    <div class="sv">
+        <a href="http://wpa.qq.com/msgrd?v=3&uin=3267087600&site=qq&menu=yes"><span
+                class="iconfont icon-custom-service"> </span> <span>联系客服</span></a>
     </div>
 </body>
 
