--- a/index/jiejue.html
+++ b/index/jiejue.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../css/jiejue.css">
     <link rel="stylesheet" href="../font/iconfont/iconfont.css">
     <script src="../js/jquery-1.12.4.js"></script>
+    <script src="../js/jquery.validate.js"></script>
     <script src="../js/jiejue.js"></script>
 </head>
 
@@ -41,7 +42,7 @@
                         <a href="./jiejue.html" class="skip active">解决方案</a>
                     </li>
                     <li>
-                        <a href="javascript:;" class="skip">合作案例</a>
+                        <a href="./teamwork.html" class="skip">合作案例</a>
                     </li>
                     <li>
                         <a href="./rencai.html" class="skip">人才招聘</a>
@@ -62,7 +63,7 @@
         </div>
     </div>
     <!-- 合作模式 -->
-    <div class="pattern">
+    <div class="pattern" id="linkThree">
         <div class="content">
             <div class="title">
                 <p>合作模式</p>
@@ -213,40 +214,43 @@
     <!-- 视频弹出层 -->
     <!-- <div class="video-model"></div> -->
     <!-- 联系我们 -->
-    <div class="contact-us">
+    <div class="contact-us" id="linkFour">
         <h3>立即获取企业专属的解决方案</h3>
         <button class="us">联系我们</button>
-        <div class="popup">
-            <div class="title">
-                <div class="iconfont icon-cuowu contact-icon"></div>
-                <h2>业务咨询</h2>
-            </div>
-            <div class="form">
-                <div class="form-item-label">
-                    <label>公司名称：</label>
-                    <span class="iconfont icon-xinghao"></span>
-                    <input type="text" name="company" placeholder="输入您的公司名称">
+        <div class="shade-parent">
+            <div class="popup">
+                <div class="title">
+                    <div class="iconfont icon-cuowu contact-icon"></div>
+                    <h2>业务咨询</h2>
                 </div>
-                <div class="form-item-label">
-                    <label>联系方式：</label>
-                    <span class="iconfont icon-xinghao"></span>
-                    <input type="tel" name="company" placeholder="输入您的手机号码">
-                </div>
-                <div class="form-item-label">
-                    <label class="consult">咨询问题：</label>
-                    <span class="iconfont icon-xinghao consult"></span>
-                    <textarea name="textarea" type="text" name="company" placeholder="输入您想要咨询的问题"></textarea>
-                </div>
-                <div class="text">点击提交视为您已阅读并同意禧越公司《隐私政策》及《法律法规》</div>
-                <div class="form-submit">
-                    <button onclick="Submit()" class="submit">提交</button>
-                </div>
-                <div class="bottom">
-                    <p>400-099-8777</p>
-                    <div class="zuo"></div>
-                    <div class="you"></div>
-                </div>
-
+                <form id="signupForm" method="get" action="">
+                    <div class="form">
+                        <div class="form-item-label">
+                            <label>公司名称：</label>
+                            <span class="iconfont icon-xinghao"></span>
+                            <input type="text" name="companyName" placeholder="输入您的公司名称">
+                        </div>
+                        <div class="form-item-label">
+                            <label>联系方式：</label>
+                            <span class="iconfont icon-xinghao"></span>
+                            <input type="tel" name="companyPhone" placeholder="输入您的手机号码">
+                        </div>
+                        <div class="form-item-label">
+                            <label class="consult">咨询问题：</label>
+                            <!-- <span class="iconfont icon-xinghao consult"></span> -->
+                            <textarea name="textarea" type="text" name="company" placeholder="输入您想要咨询的问题"></textarea>
+                        </div>
+                        <div class="text">点击提交视为您已阅读并同意禧润公司《隐私政策》及《法律法规》</div>
+                        <div class="form-submit">
+                            <button class="submit">提交</button>
+                        </div>
+                        <div class="bottom">
+                            <p>0571-8609 8167</p>
+                            <div class="zuo"></div>
+                            <div class="you"></div>
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
@@ -263,40 +267,40 @@
                 <li class="set">
                     <dl>
                         <dt>服务</dt>
-                        <dd>业务分类</dd>
-                        <dd>产品类型</dd>
-                        <dd>解决方案</dd>
-                        <dd>产品模式</dd>
+                        <dd><a href="./product.html">业务分类</a></dd>
+                        <dd><a href="product.html#linkOne">产品类型</a></dd>
+                        <dd><a href="./jiejue.html">解决方案</a></dd>
+                        <dd><a href="jiejue.html#linkThree">合作模式</a></dd>
                     </dl>
                 </li>
                 <li class="set">
                     <dl>
                         <dt>公司</dt>
-                        <dd>业务分类</dd>
-                        <dd>产品类型</dd>
-                        <dd>解决方案</dd>
-                        <dd>产品模式</dd>
+                        <dd><a href="./aboutUs.html">关于我们</a></dd>
+                        <dd><a href="index.html#linkFour">联系我们</a></dd>
+                        <dd><a href="./rencai.html">人才招聘</a></dd>
+                        <dd><a href="aboutUs.html#linkFive">新闻咨询</a></dd>
                     </dl>
                 </li>
                 <li class="end">
                     <p>业务资讯专线：</p>
-                    <p class="pt number">400-099-8777</p>
-                    <p class="pt">联系邮箱：xy@seniornet.cn</p>
+                    <p class="pt number">0571-8609 8167</p>
+                    <p class="pt">联系邮箱：hr@tonher.cn</p>
                     <p class="pt last">
-                        <span class="text-one lf">办公地址：杭州市拱墅区祥园路139号浙大网新智慧立方A座605</span>
+                        <span class="text-one lf">办公地址：杭州市江干区江宁路553号东溪德必易园B3106</span>
                     </p>
                 </li>
             </ul>
             <div class="line-content">
                 <div class="writer">
                     <p>
-                        Copyright @ 2016-2019 禧润通和（杭州）科技有限公司 All Rights Resvered
-                        <a href="javascript:;">浙ICP备16035416号</a>
+                        Copyright © 2020-2021 禧润通和（杭州）科技有限公司 All Rights Resvered
+                        <!-- <a href="javascript:;">增值电信业务经营许可证：浙B2-20140331 - 浙ICP备13037466号</a> -->
                     </p>
                     <span>|</span>
                     <p>
-                        <img src="https://cos.xiaodashi.com/static/offical/offical/img/index/gov.png">
-                        <a href="javascript:;">浙公网安备 33010302003475号-4</a>
+                        <!-- <img src="https://cos.xiaodashi.com/static/offical/offical/img/index/gov.png"> -->
+                        <a href="javascript:;">增值电信业务经营许可证：浙B2-20193152 - 浙ICP备19000326号</a>
                     </p>
                 </div>
 
@@ -306,6 +310,11 @@
     <div class="back-top">
         <p class="huojian iconfont icon-huojian-X"></p>
         <p class="font">返回顶部</p>
+    </div>
+    <!-- 联系客服 -->
+    <div class="sv">
+        <a href="http://wpa.qq.com/msgrd?v=3&uin=3267087600&site=qq&menu=yes"><span
+                class="iconfont icon-custom-service"> </span> <span>联系客服</span></a>
     </div>
 </body>
 
