--- a/index/rencai.html
+++ b/index/rencai.html
@@ -41,7 +41,7 @@
                         <a href="./jiejue.html" class="skip">解决方案</a>
                     </li>
                     <li>
-                        <a href="javascript:;" class="skip">合作案例</a>
+                        <a href="./teamwork.html" class="skip">合作案例</a>
                     </li>
                     <li>
                         <a href="./rencai.html" class="skip active">人才招聘</a>
@@ -64,7 +64,7 @@
                 </select> -->
                 <div class="list lf">
                     <p class="lf">职位列表</p>
-                    <i class="iconfont icon-xia direction"></i>
+                    <i class="iconfont icon-xia position-direction"></i>
                     <ul class="select-list">
                         <li>全部</li>
                         <li>技术研发</li>
@@ -87,7 +87,39 @@
                     <li class="shang ul-li">
                         <div class="font-top">
                             <p class="lf">web前端开发</p>
-                            <p class="rg red-text">10-20K</p>
+                            <p class="rg red-text">7k~12K</p>
+                        </div>
+                        <div class="font-bottom">
+                            <p class="lf">
+                                <span>软件工程师</span>
+                                <i></i>
+                                <span>本科</span>
+                                <i></i>
+                                <span>1-3年</span>
+                            </p>
+                            <p class="rg apply">申请职位</p>
+                        </div>
+                        <div class="msg">
+                            <p>岗位职责</p>
+                            <ol>
+                                <li>负责所在项目需求实现设计与开发；</li>
+                                <li>完成系统细节技术设计，完成核心代码的编写；</li>
+                                <li>确保需求实现满足项目需求设计规范、软件编码规范以及性能要求；</li>
+                                <li>积极参与阶段评审，满足项目过程质量要求、审核和指导开发人员编程，确保按照系统设计执行；</li>
+                            </ol>
+                            <p>岗位要求</p>
+                            <ol>
+                                <li>全日制（计算机）本科及以上学历，3年以上技术开发工作经验;</li>
+                                <li>熟悉常见的一些解决方案及其原理：分布式缓存、SOA、消息中间件，负载均衡、连接池等;</li>
+                                <li>有良好的软件工程知识和编码规范意识，精通软件分层设计;</li>
+                                <li>技术视野开阔，学习能力好，对业界新技术敏感，喜欢钻研，具有良好的学习能力并注重团队合作;</li>
+                            </ol>
+                        </div>
+                    </li>
+                    <li class="shang ul-li">
+                        <div class="font-top">
+                            <p class="lf">JAVA开发工程师</p>
+                            <p class="rg red-text">10k~21K</p>
                         </div>
                         <div class="font-bottom">
                             <p class="lf">
@@ -121,119 +153,74 @@
                     </li>
                     <li class="shang ul-li">
                         <div class="font-top">
-                            <p class="lf">web前端开发</p>
-                            <p class="rg red-text">10-20K</p>
+                            <p class="lf">行政前台</p>
+                            <p class="rg red-text">4K~6K</p>
                         </div>
                         <div class="font-bottom">
                             <p class="lf">
-                                <span>软件工程师</span>
+                                <span>行政管理</span>
                                 <i></i>
-                                <span>本科</span>
+                                <span>大专</span>
                                 <i></i>
-                                <span>1-3年</span>
+                                <span style="font-size: 12px;">可接受实习生/应届毕业生</span>
                             </p>
                             <p class="rg apply">申请职位</p>
                         </div>
                         <div class="msg">
                             <p>岗位职责</p>
                             <ol>
-                                <li>参与设计与开发面向外部B端用户的技术保障平台;</li>
-                                <li>完成重要业务模块及核心代码框架的搭建及实现;</li>
-                                <li>基于现有的技术保障体系，挖掘需求，痛点和创新点，并推动其在技术保障平台上的实现;</li>
-                                <li>建立常规市场调查体系，收集公司面临的特定市场营销问题有关的信息</li>
+                                <li>负责接听总机电话咨询或转接至相应人员，相关问题记录；</li>
+                                <li>负责来访人员（面试者、客户及相关访客）引荐与接待；</li>
+                                <li>协助招聘官完成日常数据记录及邮件分类推送；</li>
+                                <li>前台办公环境维护，快递及文件收发；</li>
+                                <li>上级交待的其他工作。</li>
                             </ol>
                             <p>岗位要求</p>
                             <ol>
-                                <li>全日制（计算机）本科及以上学历，3年以上技术开发工作经验;</li>
-                                <li>Java基础扎实：精通多线程编程，掌握常用的设计模式；熟悉JVM，包括内存模型、类加载机制以及性能优化；有大型系统开发经历;</li>
-                                <li>熟悉前端开发（JS、HTML、CSS）;</li>
-                                <li>熟悉常见的一些解决方案及其原理：分布式缓存、SOA、消息中间件，负载均衡、连接池等;</li>
-                                <li>有良好的软件工程知识和编码规范意识，精通软件分层设计;</li>
-                                <li>技术视野开阔，学习能力好，对业界新技术敏感，喜欢钻研，具有良好的学习能力并注重团队合作;</li>
-                                <li>熟练掌握Linux操作系统，对常用命令运用娴熟，能够根据实际需要快速编写Shell脚本</li>
-                            </ol>
-                        </div>
-                    </li>
-                    <li class="shang ul-li">
-                        <div class="font-top">
-                            <p class="lf">web前端开发</p>
-                            <p class="rg red-text">10-20K</p>
-                        </div>
-                        <div class="font-bottom">
-                            <p class="lf">
-                                <span>软件工程师</span>
-                                <i></i>
-                                <span>本科</span>
-                                <i></i>
-                                <span>1-3年</span>
-                            </p>
-                            <p class="rg apply">申请职位</p>
-                        </div>
-                        <div class="msg">
-                            <p>岗位职责</p>
-                            <ol>
-                                <li>参与设计与开发面向外部B端用户的技术保障平台;</li>
-                                <li>完成重要业务模块及核心代码框架的搭建及实现;</li>
-                                <li>基于现有的技术保障体系，挖掘需求，痛点和创新点，并推动其在技术保障平台上的实现;</li>
-                                <li>建立常规市场调查体系，收集公司面临的特定市场营销问题有关的信息</li>
-                            </ol>
-                            <p>岗位要求</p>
-                            <ol>
-                                <li>全日制（计算机）本科及以上学历，3年以上技术开发工作经验;</li>
-                                <li>Java基础扎实：精通多线程编程，掌握常用的设计模式；熟悉JVM，包括内存模型、类加载机制以及性能优化；有大型系统开发经历;</li>
-                                <li>熟悉前端开发（JS、HTML、CSS）;</li>
-                                <li>熟悉常见的一些解决方案及其原理：分布式缓存、SOA、消息中间件，负载均衡、连接池等;</li>
-                                <li>有良好的软件工程知识和编码规范意识，精通软件分层设计;</li>
-                                <li>技术视野开阔，学习能力好，对业界新技术敏感，喜欢钻研，具有良好的学习能力并注重团队合作;</li>
-                                <li>熟练掌握Linux操作系统，对常用命令运用娴熟，能够根据实际需要快速编写Shell脚本</li>
+                                <li>全日制大专及以上学历，五官端正气质佳，礼仪修养好；</li>
+                                <li>口齿伶俐，亲和力强，应变能力佳；</li>
+                                <li>掌握常用办公软件操作办法，书面整理能力强；</li>
                             </ol>
                         </div>
                     </li>
                     <li class="ul-li">
                         <div class="font-top">
-                            <p class="lf">web前端开发</p>
-                            <p class="rg red-text">10-20K</p>
+                            <p class="lf">大客户经理</p>
+                            <p class="rg red-text">10K~18K</p>
                         </div>
                         <div class="font-bottom">
                             <p class="lf">
-                                <span>软件工程师</span>
+                                <span>市场营销类</span>
                                 <i></i>
-                                <span>本科</span>
+                                <span>大专</span>
                                 <i></i>
-                                <span>1-3年</span>
+                                <span>3-5年</span>
                             </p>
                             <p class="rg apply">申请职位</p>
                         </div>
                         <div class="msg">
                             <p>岗位职责</p>
                             <ol>
-                                <li>参与设计与开发面向外部B端用户的技术保障平台;</li>
-                                <li>完成重要业务模块及核心代码框架的搭建及实现;</li>
-                                <li>基于现有的技术保障体系，挖掘需求，痛点和创新点，并推动其在技术保障平台上的实现;</li>
-                                <li>建立常规市场调查体系，收集公司面临的特定市场营销问题有关的信息</li>
-                            </ol>
-                            <p>岗位要求</p>
-                            <ol>
-                                <li>全日制（计算机）本科及以上学历，3年以上技术开发工作经验;</li>
-                                <li>Java基础扎实：精通多线程编程，掌握常用的设计模式；熟悉JVM，包括内存模型、类加载机制以及性能优化；有大型系统开发经历;</li>
-                                <li>熟悉前端开发（JS、HTML、CSS）;</li>
-                                <li>熟悉常见的一些解决方案及其原理：分布式缓存、SOA、消息中间件，负载均衡、连接池等;</li>
-                                <li>有良好的软件工程知识和编码规范意识，精通软件分层设计;</li>
-                                <li>技术视野开阔，学习能力好，对业界新技术敏感，喜欢钻研，具有良好的学习能力并注重团队合作;</li>
-                                <li>熟练掌握Linux操作系统，对常用命令运用娴熟，能够根据实际需要快速编写Shell脚本</li>
+                                <li>对合作商户拓展等相关合作项目进行商务洽谈；</li>
+                                <li>配合对新业务接入等其他相关合作项目进行商务洽谈；</li>
+                                <li>协助公司内部其它部分商务相关工作；</li>
+                                <li>建立常规市场调查体系，收集公司面临的特定市场营销问题有关的信息；</li>
+                                <li>负责竞争对手信息的收集汇总，并根据情况提出相关建议和方案；</li>
+                                <li>具有TOB业务经验；</li>
+                                <li>完成上级领导交办的其他工作。</li>
                             </ol>
                         </div>
                     </li>
                     <li class="ul-li">
                         <div class="font-top">
-                            <p class="lf">web前端开发</p>
-                            <p class="rg red-text">10-20K</p>
+                            <p class="lf">结算</p>
+                            <p class="rg red-text">5K~6K</p>
                         </div>
                         <div class="font-bottom">
                             <p class="lf">
-                                <span>软件工程师</span>
+                                <span>财会类</span>
                                 <i></i>
-                                <span>本科</span>
+                                <span>专科</span>
                                 <i></i>
                                 <span>1-3年</span>
                             </p>
@@ -242,33 +229,34 @@
                         <div class="msg">
                             <p>岗位职责</p>
                             <ol>
-                                <li>参与设计与开发面向外部B端用户的技术保障平台;</li>
-                                <li>完成重要业务模块及核心代码框架的搭建及实现;</li>
-                                <li>基于现有的技术保障体系，挖掘需求，痛点和创新点，并推动其在技术保障平台上的实现;</li>
-                                <li>建立常规市场调查体系，收集公司面临的特定市场营销问题有关的信息</li>
+                                <li>负责建立台账，数据核对，应收应付核；</li>
+                                <li>处理不平账，对账差异纠错；</li>
+                                <li>制作分析各类数据报表，日报周报月报等；</li>
+                                <li>熟悉第三方支付业务及其他代充业务，负责第三方支付业务的清算；</li>
+                                <li>各类款项打款，单据审核，并做好台账；</li>
+                                <li>打款单据初步审核整理汇总并支付及其它业务需支付的款项；</li>
+                                <li>协助会计整理银行回单，做好各种账务的处理工作；</li>
+                                <li>主要负责资金数据核算、打款票据审核等。</li>
                             </ol>
                             <p>岗位要求</p>
                             <ol>
-                                <li>全日制（计算机）本科及以上学历，3年以上技术开发工作经验;</li>
-                                <li>Java基础扎实：精通多线程编程，掌握常用的设计模式；熟悉JVM，包括内存模型、类加载机制以及性能优化；有大型系统开发经历;</li>
-                                <li>熟悉前端开发（JS、HTML、CSS）;</li>
-                                <li>熟悉常见的一些解决方案及其原理：分布式缓存、SOA、消息中间件，负载均衡、连接池等;</li>
-                                <li>有良好的软件工程知识和编码规范意识，精通软件分层设计;</li>
-                                <li>技术视野开阔，学习能力好，对业界新技术敏感，喜欢钻研，具有良好的学习能力并注重团队合作;</li>
-                                <li>熟练掌握Linux操作系统，对常用命令运用娴熟，能够根据实际需要快速编写Shell脚本</li>
+                                <li>逻辑思路清晰，表达沟通能力强；</li>
+                                <li>有责任心，团队合作意识强；</li>
+                                <li>熟练操作EXCEL等办公软件；</li>
+                                <li>有相关工作经验者优先；</li>
                             </ol>
                         </div>
                     </li>
                     <li class="ul-li">
                         <div class="font-top">
-                            <p class="lf">web前端开发</p>
-                            <p class="rg red-text">10-20K</p>
+                            <p class="lf">销售支持</p>
+                            <p class="rg red-text">5K~7K</p>
                         </div>
                         <div class="font-bottom">
                             <p class="lf">
-                                <span>软件工程师</span>
+                                <span>财会类</span>
                                 <i></i>
-                                <span>本科</span>
+                                <span>大专</span>
                                 <i></i>
                                 <span>1-3年</span>
                             </p>
@@ -277,20 +265,17 @@
                         <div class="msg">
                             <p>岗位职责</p>
                             <ol>
-                                <li>参与设计与开发面向外部B端用户的技术保障平台;</li>
-                                <li>完成重要业务模块及核心代码框架的搭建及实现;</li>
-                                <li>基于现有的技术保障体系，挖掘需求，痛点和创新点，并推动其在技术保障平台上的实现;</li>
-                                <li>建立常规市场调查体系，收集公司面临的特定市场营销问题有关的信息</li>
+                                <li>1、数据对账：根据每日业务进行上下游数据对账；</li>
+                                <li>打款申请：根据每天每项业务的走量和需求进行合理的打款申请；</li>
+                                <li>业务额度管控：对上下游日常业务量进行实时跟踪，合理安排上下游及时增加额；</li>
+                                <li>催款及销量把控，对业务问题及时处理，并对通道准确性、货架全面性、调价和调价函准确性、资料完整性负责；</li>
+                                <li>完善日常业务分析，编制数据报表及有效的业务分析。</li>
                             </ol>
                             <p>岗位要求</p>
                             <ol>
-                                <li>全日制（计算机）本科及以上学历，3年以上技术开发工作经验;</li>
-                                <li>Java基础扎实：精通多线程编程，掌握常用的设计模式；熟悉JVM，包括内存模型、类加载机制以及性能优化；有大型系统开发经历;</li>
-                                <li>熟悉前端开发（JS、HTML、CSS）;</li>
-                                <li>熟悉常见的一些解决方案及其原理：分布式缓存、SOA、消息中间件，负载均衡、连接池等;</li>
-                                <li>有良好的软件工程知识和编码规范意识，精通软件分层设计;</li>
-                                <li>技术视野开阔，学习能力好，对业界新技术敏感，喜欢钻研，具有良好的学习能力并注重团队合作;</li>
-                                <li>熟练掌握Linux操作系统，对常用命令运用娴熟，能够根据实际需要快速编写Shell脚本</li>
+                                <li> 1.大专以上学历，财会专业优先；</li>
+                                <li>熟练操作Excel、Word等办公软件；</li>
+                                <li>至少1年以上销售支持工作经验；</li>
                             </ol>
                         </div>
                     </li>
@@ -311,40 +296,40 @@
                 <li class="set">
                     <dl>
                         <dt>服务</dt>
-                        <dd>业务分类</dd>
-                        <dd>产品类型</dd>
-                        <dd>解决方案</dd>
-                        <dd>产品模式</dd>
+                        <dd><a href="./product.html">业务分类</a></dd>
+                        <dd><a href="product.html#linkOne">产品类型</a></dd>
+                        <dd><a href="./jiejue.html">解决方案</a></dd>
+                        <dd><a href="jiejue.html#linkThree">合作模式</a></dd>
                     </dl>
                 </li>
                 <li class="set">
                     <dl>
                         <dt>公司</dt>
-                        <dd>业务分类</dd>
-                        <dd>产品类型</dd>
-                        <dd>解决方案</dd>
-                        <dd>产品模式</dd>
+                        <dd><a href="./aboutUs.html">关于我们</a></dd>
+                        <dd><a href="index.html#linkFour">联系我们</a></dd>
+                        <dd><a href="./rencai.html">人才招聘</a></dd>
+                        <dd><a href="aboutUs.html#linkFive">新闻咨询</a></dd>
                     </dl>
                 </li>
                 <li class="end">
                     <p>业务资讯专线：</p>
-                    <p class="pt number">400-099-8777</p>
-                    <p class="pt">联系邮箱：xy@seniornet.cn</p>
+                    <p class="pt number">0571-8609 8167</p>
+                    <p class="pt">联系邮箱：hr@tonher.cn</p>
                     <p class="pt last">
-                        <span class="text-one lf">办公地址：杭州市拱墅区祥园路139号浙大网新智慧立方A座605</span>
+                        <span class="text-one lf">办公地址：杭州市江干区江宁路553号东溪德必易园B3106</span>
                     </p>
                 </li>
             </ul>
             <div class="line-content">
                 <div class="writer">
                     <p>
-                        Copyright @ 2016-2019 禧润通和（杭州）科技有限公司 All Rights Resvered
-                        <a href="javascript:;">浙ICP备16035416号</a>
+                        Copyright © 2020-2021 禧润通和（杭州）科技有限公司 All Rights Resvered
+                        <!-- <a href="javascript:;">增值电信业务经营许可证：浙B2-20140331 - 浙ICP备13037466号</a> -->
                     </p>
                     <span>|</span>
                     <p>
-                        <img src="https://cos.xiaodashi.com/static/offical/offical/img/index/gov.png">
-                        <a href="javascript:;">浙公网安备 33010302003475号-4</a>
+                        <!-- <img src="https://cos.xiaodashi.com/static/offical/offical/img/index/gov.png"> -->
+                        <a href="javascript:;">增值电信业务经营许可证：浙B2-20193152 - 浙ICP备19000326号</a>
                     </p>
                 </div>
 
@@ -354,6 +339,11 @@
     <div class="back-top">
         <p class="huojian iconfont icon-huojian-X"></p>
         <p class="font">返回顶部</p>
+    </div>
+    <!-- 联系客服 -->
+    <div class="sv">
+        <a href="http://wpa.qq.com/msgrd?v=3&uin=3267087600&site=qq&menu=yes"><span
+                class="iconfont icon-custom-service"> </span> <span>联系客服</span></a>
     </div>
 </body>
 
