--- a/index/teamwork.html
+++ b/index/teamwork.html
@@ -19,7 +19,7 @@
     <div class="header">
         <div class="nav container">
             <div class="logo">
-                <img src="../image/logo.jpg" alt="">
+                <img src="../img/index_slices/logo@2x.png" alt="">
             </div>
             <div class="nav-box">
                 <ul>
@@ -29,17 +29,21 @@
                     <li class="direction">
                         <a href="./product.html" class="skip">产品和服务 <span class="iconfont icon-xia1"></span></a>
                         <ol class="small">
-                            <li class="first product-recharge">&gt;&nbsp;<span><a
-                                        href="product.html#linkOne">充值类产品</a></span></li>
-                            <li class="end product-equities">&gt;&nbsp;<span><a
-                                        href="product.html#linkTwo">权益类产品</a></span></li>
+                            <li class="first product-recharge">
+                                <span><img class="img-first" src="../img/product_slices/cz-wxz@2x.png"></span>
+                                <a href="product.html#linkOne">充值类产品</a>
+                            </li>
+                            <li class="end product-equities">
+                                <span><img class="img-end" src="../img/product_slices/qy-wxz@2x.png"></span>
+                                <a href="product.html#linkTwo">权益类产品</a>
+                            </li>
                         </ol>
                     </li>
                     <li>
                         <a href="./jiejue.html" class="skip">解决方案</a>
                     </li>
                     <li>
-                        <a href="javascript:;" class="active skip">合作案例</a>
+                        <a href="./teamwork.html" class="skip active">合作案例</a>
                     </li>
                     <li>
                         <a href="./rencai.html" class="skip">人才招聘</a>
@@ -51,40 +55,68 @@
             </div>
         </div>
     </div>
+    <!-- 合作案例背景 -->
+    <div class="project">
+        <div class="content container">
+            <h1>合作案例</h1>
+            <div class="line"></div>
+            <h2>打造个性化行业解决方案，为用户提供一站式产品与服务</h2>
+        </div>
+    </div>
     <!-- 合作案例 -->
     <div class="teamwork">
         <div class="content">
             <div class="title">
-                <h1>合作案例</h1>
+                <p>合作案例</p>
+                <span>敬请期待...</span>
             </div>
             <div class="hot">
                 <ul>
                     <li>
-                        <div></div>
-                        <div></div>
+                        <div class="hot-img">
+                            <img src="../img/teamwork_slices/anli1.png" alt="">
+                        </div>
+                        <div class="hot-text">
+                            <p class="text1">成功案例名称</p>
+                            <p class="line"></p>
+                            <p class="text2">
+                                项目描述：网上审批系统最终目标是使企业通过互联网完成企业的登记注册和查询，提高政府工作效率，增加政府工作的透明度。系统开通后，在很大程度上方便了企业办理登记注册。原来企业从注册到领取营业执照需要到工商局跑很多趟，而开通网上审批后企业只需一次到工商局拿取营业执照就可以了。
+                                据统计，系统上线运行半年时间内，武汉市工商网是上审批系统的总访问量达到594679次，注册用户23895个，受理项目39154个，通过36186个，表单下载次数33693次，受到咨询邮件5373封，论坛留言6112条，每周接到的电话咨询更是络绎不绝。获得领导认可与企业用户好评。
+                            </p>
+                        </div>
                     </li>
                     <li>
-                        <div></div>
-                        <div></div>
+                        <div class="hot-img">
+                            <img src="../img/teamwork_slices/anli1.png" alt="">
+                        </div>
+                        <div class="hot-text">
+                            <p class="text1">成功案例名称</p>
+                            <p class="line"></p>
+                            <p class="text2">
+                                项目描述：网上审批系统最终目标是使企业通过互联网完成企业的登记注册和查询，提高政府工作效率，增加政府工作的透明度。系统开通后，在很大程度上方便了企业办理登记注册。原来企业从注册到领取营业执照需要到工商局跑很多趟，而开通网上审批后企业只需一次到工商局拿取营业执照就可以了。
+                                据统计，系统上线运行半年时间内，武汉市工商网是上审批系统的总访问量达到594679次，注册用户23895个，受理项目39154个，通过36186个，表单下载次数33693次，受到咨询邮件5373封，论坛留言6112条，每周接到的电话咨询更是络绎不绝。获得领导认可与企业用户好评。
+                            </p>
+                        </div>
                     </li>
                     <li>
-                        <div></div>
-                        <div></div>
-                    </li>
-                    <li>
-                        <div></div>
-                        <div></div>
-                    </li>
-                    <li>
-                        <div></div>
-                        <div></div>
+                        <div class="hot-img">
+                            <img src="../img/teamwork_slices/anli1.png" alt="">
+                        </div>
+                        <div class="hot-text">
+                            <p class="text1">成功案例名称</p>
+                            <p class="line"></p>
+                            <p class="text2">
+                                项目描述：网上审批系统最终目标是使企业通过互联网完成企业的登记注册和查询，提高政府工作效率，增加政府工作的透明度。系统开通后，在很大程度上方便了企业办理登记注册。原来企业从注册到领取营业执照需要到工商局跑很多趟，而开通网上审批后企业只需一次到工商局拿取营业执照就可以了。
+                                据统计，系统上线运行半年时间内，武汉市工商网是上审批系统的总访问量达到594679次，注册用户23895个，受理项目39154个，通过36186个，表单下载次数33693次，受到咨询邮件5373封，论坛留言6112条，每周接到的电话咨询更是络绎不绝。获得领导认可与企业用户好评。
+                            </p>
+                        </div>
                     </li>
                 </ul>
             </div>
         </div>
     </div>
     <!-- 联系我们 -->
-    <div class="contact-us">
+    <!-- <div class="contact-us">
         <h3>立即获取企业专属的解决方案</h3>
         <button class="us">联系我们</button>
         <div class="popup">
@@ -108,14 +140,68 @@
                     <span class="iconfont icon-xinghao consult"></span>
                     <textarea name="textarea" type="text" name="company" placeholder="输入您想要咨询的问题"></textarea>
                 </div>
-                <div class="text">点击提交视为您已阅读并同意禧越公司《隐私政策》及《法律法规》</div>
+                <div class="text">点击提交视为您已阅读并同意禧润公司《隐私政策》及《法律法规》</div>
                 <div class="form-submit">
                     <button onclick="Submit()" class="submit">提交</button>
                 </div>
                 <div class="bottom">
-                    <p>400-099-8777</p>
+                    <p>0571-8609 8167</p>
                     <div class="zuo"></div>
                     <div class="you"></div>
+                </div>
+
+            </div>
+        </div>
+    </div> -->
+
+    <!-- 最底部 -->
+    <div class="footer">
+        <div class="container content">
+            <ul class="clearfix">
+                <li class="first">
+                    <div class="logo-img">
+                        <img src="../img/index_slices/logo1@2x.png">
+                    </div>
+                    <p class="title">禧润通和（杭州）科技有限公司</p>
+                </li>
+                <li class="set">
+                    <dl>
+                        <dt>服务</dt>
+                        <dd><a href="./product.html">业务分类</a></dd>
+                        <dd><a href="product.html#linkOne">产品类型</a></dd>
+                        <dd><a href="./jiejue.html">解决方案</a></dd>
+                        <dd><a href="jiejue.html#linkThree">合作模式</a></dd>
+                    </dl>
+                </li>
+                <li class="set">
+                    <dl>
+                        <dt>公司</dt>
+                        <dd><a href="./aboutUs.html">关于我们</a></dd>
+                        <dd><a href="index.html#linkFour">联系我们</a></dd>
+                        <dd><a href="./rencai.html">人才招聘</a></dd>
+                        <dd><a href="aboutUs.html#linkFive">新闻咨询</a></dd>
+                    </dl>
+                </li>
+                <li class="end">
+                    <p>业务资讯专线：</p>
+                    <p class="pt number">0571-8609 8167</p>
+                    <p class="pt">联系邮箱：hr@tonher.cn</p>
+                    <p class="pt last">
+                        <span class="text-one lf">办公地址：杭州市江干区江宁路553号东溪德必易园B3106</span>
+                    </p>
+                </li>
+            </ul>
+            <div class="line-content">
+                <div class="writer">
+                    <p>
+                        Copyright © 2020-2021 禧润通和（杭州）科技有限公司 All Rights Resvered
+                        <!-- <a href="javascript:;">增值电信业务经营许可证：浙B2-20140331 - 浙ICP备13037466号</a> -->
+                    </p>
+                    <span>|</span>
+                    <p>
+                        <!-- <img src="https://cos.xiaodashi.com/static/offical/offical/img/index/gov.png"> -->
+                        <a href="javascript:;">增值电信业务经营许可证：浙B2-20193152 - 浙ICP备19000326号</a>
+                    </p>
                 </div>
 
             </div>
@@ -125,61 +211,11 @@
         <p class="huojian iconfont icon-huojian-X"></p>
         <p class="font">返回顶部</p>
     </div>
-
-    <!--主页尾部-->
-    <div class="footer">
-        <div class="container content">
-            <ul class="clearfix">
-                <li>
-                    <div class="logo-img">
-                        <img src="../image/logo2@3x.png">
-                    </div>
-                    <p class="title">禧润通和（杭州）科技有限公司</p>
-                </li>
-                <li class="set">
-                    <dl>
-                        <dt>服务</dt>
-                        <dd>业务分类</dd>
-                        <dd>产品类型</dd>
-                        <dd>解决方案</dd>
-                        <dd>产品模式</dd>
-                    </dl>
-                </li>
-                <li class="set">
-                    <dl>
-                        <dt>服务</dt>
-                        <dd>业务分类</dd>
-                        <dd>产品类型</dd>
-                        <dd>解决方案</dd>
-                        <dd>产品模式</dd>
-                    </dl>
-                </li>
-                <li>
-                    <p>业务资讯专线：</p>
-                    <p class="number">400-099-8777</p>
-                    <p>联系邮箱：xy@seniornet.cn</p>
-                    <p class="clearfix last">
-                        <span class="text-one lf">办公地址：</span>
-                        <span class="text-two lf">杭州市拱墅区祥园路139号浙大网新智慧立方A座605</span>
-                    </p>
-                </li>
-            </ul>
-            <div class="line-content">
-                <div class="writer">
-                    <p>
-                        Copyright @ 2016-2019 禧润通和（杭州）科技有限公司 All Rights Resvered
-                        <a href="javascript:;">浙ICP备16035416号</a>
-                    </p>
-                    <p>
-                        <img src="https://cos.xiaodashi.com/static/offical/offical/img/index/gov.png">
-                        <a href="javascript:;">浙公网安备 33010302003475号-4</a>
-                    </p>
-                </div>
-
-            </div>
-        </div>
+    <!-- 联系客服 -->
+    <div class="sv">
+        <a href="http://wpa.qq.com/msgrd?v=3&uin=3267087600&site=qq&menu=yes"><span
+                class="iconfont icon-custom-service"> </span> <span>联系客服</span></a>
     </div>
-
 </body>
 
 </html>
